# uCore

./: .clinerules  .continuerules  .env.example  .gitignore  .tasker.dev-flow.yaml  CLINE_BRIEF.md  CONTEXT.md  Groovebox.code-workspace  HANDOVER.md  README.md  TODO.md  devlog.mcp.yaml  fieldnotes.md  new-mcp-server.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-icons.ts  ucore.code-workspace  wisdom.md
backend/: pyproject.toml
backend/app/: __main__.py
backend/config/: agents.yaml  llm_router.yaml
backend/health/: health_watchdog.py
backend/mcp/: README.md  dry_run_example.md  mcp-hivemind-manifest.json  mcp-knowledge-manifest.json  mcp-manifest.json  mcp_diagnostics.py  start_firewatch.sh  start_hivemind.sh  start_scheduler.sh  start_secrets.sh  start_serena.sh
backend/plate_refresh/: __init__.py  models.py  monitoring.py  refresh.py  verification.py
backend/schemas/: activity.schema.sql
backend/seeds/: feed-pod-seed.json
backend/tests/: conftest.py  e2e_playwright.py  test_af_manager_sync.py  test_agent_specialization.py  test_api_agents_spec.py  test_api_budget_enforcement.py  test_api_chat.py  test_api_clipboard.py  test_api_containers.py  test_api_docker.py  test_api_error_handling.py  test_api_exec.py  test_api_gridsmith.py  test_api_knowledge_import.py  test_api_knowledge_local.py  test_api_knowledge_remote.py  test_api_mcp.py  test_api_metadata.py  test_api_secrets.py  test_api_server_surface.py  test_api_skills.py  test_api_snacks.py  test_api_surfaces.py  test_api_system_surface.py  test_api_tools.py  test_api_user_workflow.py  test_api_workflows_phase9.py  test_api_workflows_runtime.py  test_chat_cache.py  test_container_manager.py  test_core_config.py  test_core_snackbar.py  test_doclang_bridge.py  test_episodic_log.py  test_flow_router.py  test_global_shortcut.py  test_health.py  test_health_redaction.py  test_knowledge_appflowy_search.py  test_knowledge_local.py  (+33 more)
(+929 files in other folders)
