[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ucore"
version = "4.0.0"
description = "uCore — unified daemon combining uServer + uConnect backend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "uDos Go" },
]

dependencies = [
    "aiohttp>=3.9,<4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["app*", "app.models*", "app.core*", "app.api*", "app.services*", "app.surfaces*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

